--- a/cmpalette/src/main/resources/override/tuning/students/students/form/RkkResourceOrderForm.pal.xml
+++ b/cmpalette/src/main/resources/override/tuning/students/students/form/RkkResourceOrderForm.pal.xml
@@ -3,10 +3,10 @@
   <directories>
     <!-- <by-key name="${speciality:Специальность}" id="specialityOrder" key="Специальность"/>
     <by-key name="${speciality:Группа}" id="groupOrder" key="Группа"/> -->
-    <custom-by-key id="specialityOrder" name="${speciality:Специальность}" collection-ref="(class)" field-name="speciality" key="Специальность">
+    <custom-by-key id="specialityOrder" name="${speciality:Специальность}" collection-ref="(class)" field-name="zn" key="Специальность">
       <module ident="Students"/>
     </custom-by-key>
-    <custom-by-key id="groupOrder" name="${group:Группа}" collection-ref="(class)" field-name="group" key="Группа">
+    <custom-by-key id="groupOrder" name="${group:Группа}" collection-ref="(class)" field-name="zn" key="Группа">
       <module ident="Students"/>
     </custom-by-key>
   </directories>
@@ -69,7 +69,7 @@
                   <label-style field-width="4" field-unit="symbol"/>
                 </appearance>
               </field>
-              <field attribute-ref="dateH" >
+              <field attribute-ref="docDate" >
                 <properties>
                   <read-only condition-union="AND">
                     <condition>true</condition>
@@ -125,7 +125,7 @@
                   <label-style field-width="5" field-unit="symbol"/>
                 </appearance>
               </field>
-              <field attribute-ref="signH">
+              <field attribute-ref="signPerson">
                 <properties>
                   <read-only condition-union="AND">
                     <condition>true</condition>
@@ -142,7 +142,7 @@
               </field>
             </component>
           </section>
-          <field attribute-ref="$titleHeader">
+          <field attribute-ref="inputHeaderWithOutPlus">
             <properties>
               <require condition-union="AND">
                 <condition>true</condition>
@@ -164,11 +164,8 @@
               </field-style>
             </appearance>
             <hint-in-field>${ui.form.RkkResourceInternalForm.section.Header.field.titleHeader.hintInField:Введите заголовок документа}</hint-in-field>
-            <directories manual-input="true" limit-livesearch="no-restrictions">
-              <directory-ref ref="subject"/>
-            </directories>
           </field>
-          <field attribute-ref="$titleHeader">
+          <field attribute-ref="inputHeaderWithOutPlus">
             <properties>
               <require condition-union="AND">
                 <condition>true</condition>
@@ -188,9 +185,6 @@
               </field-style>
             </appearance>
             <hint-in-field>${ui.form.RkkResourceInternalForm.section.Header.field.titleHeader.hintInField:Введите заголовок документа}</hint-in-field>
-            <directories manual-input="true" limit-livesearch="no-restrictions">
-              <directory-ref ref="subject"/>
-            </directories>
           </field>
         </component>
       </section>
@@ -210,6 +204,11 @@
                             <style id="tunBorderedField"/>        <!-- Поле в рамке -->
                           </label-style>
                         </appearance>
+                        <properties>
+                          <require condition-union="AND">
+                            <condition>true</condition>
+                          </require>
+                        </properties>
                       </field>
                       <field attribute-ref="docDate" name="${docDate:Дата документа:}">
                         <appearance>
@@ -217,6 +216,11 @@
                             <style id="tunBorderedField"/>        <!-- Поле в рамке -->
                           </label-style>
                         </appearance>
+                        <properties>
+                          <require condition-union="AND">
+                            <condition>true</condition>
+                          </require>
+                        </properties>
                       </field>
                       <field attribute-ref="group" name="${group:Группа:}">
                         <directories>
@@ -227,6 +231,11 @@
                             <style id="tunBorderedField"/>        <!-- Поле в рамке -->
                           </label-style>
                         </appearance>
+                        <properties>
+                          <require condition-union="AND">
+                            <condition>true</condition>
+                          </require>
+                        </properties>
                       </field>
                       <field attribute-ref="speciality" name="${speciality:Специальность:}">
                         <directories>
@@ -237,6 +246,11 @@
                             <style id="tunBorderedField"/>        <!-- Поле в рамке -->
                           </label-style>
                         </appearance>
+                        <properties>
+                          <require condition-union="AND">
+                            <condition>true</condition>
+                          </require>
+                        </properties>
                       </field>
                       <field attribute-ref="signPerson" name="${signPerson:Подпись:}">
                         <appearance>
@@ -244,6 +258,11 @@
                             <style id="tunBorderedField"/>        <!-- Поле в рамке -->
                           </label-style>
                         </appearance>
+                        <properties>
+                          <require condition-union="AND">
+                            <condition>true</condition>
+                          </require>
+                        </properties>
                         <directories livesearch="true" limit-livesearch="sys-current">
                           <directory-ref ref="CURRENT_SYS_HUMAN"/>
                           <directory-ref ref="CURRENT_SYS_HUMAN_Hierarchy"/>
@@ -269,6 +288,11 @@
                             <style id="tunBorderedField"/>        <!-- Поле в рамке -->
                           </label-style>
                         </appearance>
+                        <properties>
+                          <require condition-union="AND">
+                            <condition>true</condition>
+                          </require>
+                        </properties>
                       </field>
                       <field attribute-ref="docNum" name="${docNum:Номер документа:}">
                         <appearance>
@@ -276,6 +300,11 @@
                             <style id="tunBorderedField"/>        <!-- Поле в рамке -->
                           </label-style>
                         </appearance>
+                        <properties>
+                          <require condition-union="AND">
+                            <condition>true</condition>
+                          </require>
+                        </properties>
                       </field>
                       <field attribute-ref="course" name="${course:Курс:}">
                         <appearance>
@@ -283,6 +312,11 @@
                             <style id="tunBorderedField"/>        <!-- Поле в рамке -->
                           </label-style>
                         </appearance>
+                        <properties>
+                          <require condition-union="AND">
+                            <condition>true</condition>
+                          </require>
+                        </properties>
                       </field>
                       <field attribute-ref="executor" name="${executor:Исполнители:}">
                         <appearance>
@@ -290,6 +324,11 @@
                             <style id="tunBorderedField"/>        <!-- Поле в рамке -->
                           </label-style>
                         </appearance>
+                        <properties>
+                          <require condition-union="AND">
+                            <condition>true</condition>
+                          </require>
+                        </properties>
                       </field>
                     </component>
                   </section>
