--- a/cmpalette/src/main/resources/override/tuning/students/students/form/RkkResourceStudentsForm.pal.xml
+++ b/cmpalette/src/main/resources/override/tuning/students/students/form/RkkResourceStudentsForm.pal.xml
@@ -47,7 +47,7 @@
               </field>
             </component>
           </section>
-          <field attribute-ref="$titleHeader">
+          <field attribute-ref="inputHeaderWithOutPlus">
             <properties>
               <require condition-union="AND">
                 <condition>true</condition>
@@ -69,11 +69,8 @@
               </field-style>
             </appearance>
             <hint-in-field>${ui.form.RkkResourceInternalForm.section.Header.field.titleHeader.hintInField:Введите заголовок документа}</hint-in-field>
-            <directories manual-input="true" limit-livesearch="no-restrictions">
-              <directory-ref ref="subject"/>
-            </directories>
           </field>
-          <field attribute-ref="$titleHeader">
+          <field attribute-ref="inputHeaderWithOutPlus">
             <properties>
               <require condition-union="AND">
                 <condition>true</condition>
@@ -93,9 +90,6 @@
               </field-style>
             </appearance>
             <hint-in-field>${ui.form.RkkResourceInternalForm.section.Header.field.titleHeader.hintInField:Введите заголовок документа}</hint-in-field>
-            <directories manual-input="true" limit-livesearch="no-restrictions">
-              <directory-ref ref="subject"/>
-            </directories>
           </field>
         </component>
       </section>
@@ -109,6 +103,11 @@
                         <style id="tunBorderedField"/>        <!-- Поле в рамке -->
                       </label-style>
                     </appearance>
+                    <properties>
+                      <require condition-union="AND">
+                        <condition>true</condition>
+                      </require>
+                    </properties>
                   </field>
                   <field attribute-ref="birthDate" name="${birthDate:Дата рождения:}">
                     <appearance>
@@ -116,6 +115,11 @@
                         <style id="tunBorderedField"/>        <!-- Поле в рамке -->
                       </label-style>
                     </appearance>
+                    <properties>
+                      <require condition-union="AND">
+                        <condition>true</condition>
+                      </require>
+                    </properties>
                   </field>
                   <field attribute-ref="startDate" name="${startDate:Дата поступления:}">
                     <appearance>
@@ -123,6 +127,11 @@
                         <style id="tunBorderedField"/>        <!-- Поле в рамке -->
                       </label-style>
                     </appearance>
+                    <properties>
+                      <require condition-union="AND">
+                        <condition>true</condition>
+                      </require>
+                    </properties>
                   </field>
                   <field attribute-ref="group" name="${group:Группа:}">
                     <appearance>
@@ -133,6 +142,11 @@
                     <directories>
                       <directory-ref ref="group"/>
                     </directories>
+                    <properties>
+                      <require condition-union="AND">
+                        <condition>true</condition>
+                      </require>
+                    </properties>
                 </field>
                   <field attribute-ref="course" name="${course:Курс:}">
                   <appearance>
@@ -140,6 +154,11 @@
                       <style id="tunBorderedField"/>        <!-- Поле в рамке -->
                     </label-style>
                   </appearance>
+                    <properties>
+                      <require condition-union="AND">
+                        <condition>true</condition>
+                      </require>
+                    </properties>
                 </field>
                   <field attribute-ref="speciality" name="${speciality:Специальность:}">
                     <appearance>
@@ -150,6 +169,11 @@
                     <directories>
                       <directory-ref ref="speciality"/>
                     </directories>
+                    <properties>
+                      <require condition-union="AND">
+                        <condition>true</condition>
+                      </require>
+                    </properties>
                   </field>
                 </component>
               </section>
